@@ -48,7 +48,7 @@
         for="collective.megaphone.interfaces.IMegaphone"
         class="..renderer.MegaphoneRenderer"
         permission="zope.Public"
-        allowed_attributes="render_letter render_plaintext_letter render_thankyou render_recipient_source_snippets"
+        allowed_attributes="render_letter render_plaintext_letter render_thankyou render_recipient_source_snippets render_all_letters"
         />
     <browser:page
         name="letter-mailer-renderer"
